# KantuCompare

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  RichImage.hpp  app.cpp  app_design.hpp  cvpkg.json  cvpkg_imgui_docking.json  deps.cmake  image_compare.cpp  image_compare_core.cpp  image_compare_core.hpp  image_io.cpp  image_render.hpp  imageutils.h  imgui.ini  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_widgets.cpp  my_widgets.hpp  sled_clone_repos.py  sledpkg.py  sledpkg_run.py  testbed.cpp
.github/workflows/: linux-x64.yml  mac-x64.yml  windows-x64.yml
cmake/: PVS-Studio.cmake  deps.cmake  ninja_colorful_output.cmake  output_dir.cmake  overlook.cmake  summary.cmake
src/: CMakeLists.txt  app.cpp  app_design.hpp  image_compare.cpp  image_compare.hpp  image_io.cpp  image_io.hpp  image_render.cpp  image_render.hpp  image_viewer.cpp
src/kantu/: CMakeLists.txt  app.cpp  app_design.hpp  compare.cpp  compare.hpp  image.hpp  image_compare.cpp  image_format.cpp  image_format.hpp  image_inspect.h  image_io.cpp  image_io.hpp  image_render.cpp  image_render.hpp  image_viewer.cpp  log.hpp  string.cpp  string.hpp  transform_format.cpp  transform_format.hpp
src/kantu_tests/: CMakeLists.txt  test_image_compare.cpp
tests/: CMakeLists.txt  test_image_compare.cpp
